--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,11 @@
   <title>Convicts</title>
   <%= stylesheet_link_tag :all %>
   <%= javascript_include_tag :defaults %>
+
+
   <%= javascript_include_tag 'highcharts' %>
+  <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script> 
+
   <%= csrf_meta_tag %>
 </head>
 <body>
