--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,9 +9,12 @@
   <%= javascript_include_tag 'highcharts' %>
   <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script> 
 
+  <link type="text/css" rel="stylesheet" href="http://yui.yahooapis.com/3.3.0/build/cssfonts/fonts-min.css" /> 
+  <script type="text/javascript" src="http://yui.yahooapis.com/3.3.0/build/yui/yui-min.js"></script> 
+
   <%= csrf_meta_tag %>
 </head>
-<body>
+<body class="yui3-skin-sam  yui-skin-sam">
 
 <%= yield %>
 
