--- a/app/views/data/years.html.erb
+++ b/app/views/data/years.html.erb
@@ -1,3 +1,7 @@
+<% content_for :head do %>
+  <%= javascript_include_tag 'highcharts' %>
+<% end %>
+
 <h1>Departure Year</h1>
 
 <div id="year-graph"> </div>
