--- a/app/views/data/court_counties.html.erb
+++ b/app/views/data/court_counties.html.erb
@@ -1,3 +1,7 @@
+<% content_for :head do %>
+  <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script> 
+<% end %>
+
 <h1>Convict Court Locations</h1>
 
 <div id="map_canvas" style="width: 300px; height: 450px"></div> 
