--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,10 +8,13 @@
   <%= javascript_include_tag 'theme/modernizr.min.js' %>
   <%= javascript_include_tag 'theme/tooltip.jquery.js' %>
 
-  <%= javascript_include_tag 'highcharts' %>
-  <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script> 
-
+  
   <link href='http://fonts.googleapis.com/css?family=Neuton' rel='stylesheet' type='text/css'> 
+
+  <!-- Dependencies -->
+  <script src="http://yui.yahooapis.com/2.9.0/build/yahoo-dom-event/yahoo-dom-event.js"></script>
+  <!-- Source file -->
+  <script src="http://yui.yahooapis.com/2.9.0/build/logger/logger-min.js"></script>
 
   <%= csrf_meta_tag %>
 
@@ -83,5 +86,8 @@
     </div> <!-- .section -->
   </div> <!-- #footer .row -->
 
+  <script>
+    YAHOO.widget.Logger.enableBrowserConsole();
+  </script>
 </body>
 </html>
