--- a/app/views/data/court_counties.html.erb
+++ b/app/views/data/court_counties.html.erb
@@ -2,9 +2,15 @@
   <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script> 
 <% end %>
 
-<h1>Convict Court Locations</h1>
+<% content_for :page_header do %>
+  <h2 class="page-title">
+    Convict Court Locations
+  </h2>
+<% end %>
 
-<div id="map_canvas" style="width: 300px; height: 450px"></div> 
+<div class="bordered" style="clear: both;">
+  <div id="map_canvas" style="width: 300px; height: 450px"></div> 
+</div>
 
 <script>
   
