style departure date page

--- a/app/views/convicts/index.html.erb
+++ b/app/views/convicts/index.html.erb
@@ -14,7 +14,7 @@
     <% elsif params[:destination] %>
       Convicts going to <%= params[:destination] %>
     <% elsif params[:departure_year] %>
-      Convicts departing <%= params[:departure_year] %>
+      Convicts departing in <%= params[:departure_year] %>
     <% elsif params[:court_county] %>
       Convicts convicted near <%= params[:court_county] %>
     <% elsif params[:q].present? %>
