--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -25,7 +25,7 @@
   clear: both;
 }
 
-#year-graph-container {
+#year-graph-container, #month-graph-container, #decade-graph-container{
   float: left;
   width: 700px;
 }
